--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projekt 1</title>
+    <link rel="stylesheet" href="common.css">
 </head>
 
 <body>
+    <a href="remove/index.html">Remove</a>
+    <a href="sum/index.html">Sum</a>
+    <a href="repetition/index.html">Repetitions</a>
+    <a href="clear/index.html">Clear</a>
+    <a href="findSame/index.html">Find Same</a>
+    <a href="addUpTo/index.html">Add Up To</a>
 
 </body>
 
