skapat länkar till respektive sidor

--- a/addUpTo/index.html
+++ b/addUpTo/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <p>Du är i remove mappen</p>
+    <a href="../index.html">HOME</a>
+    <p>Du är i addUpTo mappen</p>
 </body>
 
 </html>
