--- a/remove/index.html
+++ b/remove/index.html
@@ -4,12 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Remove</title>
+    <link rel="stylesheet" href="../common.css">
 </head>
 
 <body>
-    <a href="../index.html">HOME</a>
-    <p>Du är i remove mappen</p>
+    <div id="container">
+        <div>
+            <a href="../index.html">HOME</a>
+            <p>Du är i remove mappen</p>
+            <div>
+                <label for=inputNumber> How many numbers in the grid?</label>
+                <input type="text" id="inputNumber">
+                <button id="createButton">Create</button>
+
+            </div>
+            <br>
+            <div>
+                <button id="newRandomNumberButton">New Random Number</button>
+                <input type="text" id="newRandomNumberField">
+                <button id="removeButton">Remove</button>
+                <input type="text" id="removeField">
+            </div>
+
+            <script src="../common.js"> </script>
+            <script src="index.js"> </script>
+
+
+            <div>
 </body>
 
 </html>
