--- a/clear/index.html
+++ b/clear/index.html
@@ -4,12 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clear</title>
+    <link rel="stylesheet" href="../common.css">
 </head>
 
 <body>
-    <a href="../index.html">HOME</a>
-    <p> Du är i clear mappen </p>
+    <div id="container">
+        <a href="../index.html">HOME</a>
+        <div>
+            <label for=inputNumber> How many numbers in the grid?</label>
+            <input type="text" id="inputNumber">
+            <button id="createButton">Create</button>
+
+        </div>
+        <p> Du är i clear mappen </p>
+        <script src="../common.js"> </script>
+    </div>
 </body>
 
 </html>
