--- a/sum/index.html
+++ b/sum/index.html
@@ -24,7 +24,7 @@
                 <br>
                 <label for="sumOfMarkedField">Sum of Marked: </label>
                 <input type="text" id="sumOfMarkedField">
-                <button>Reset</button>
+                <button id="resetButton">Reset</button>
             </div>
         </div>
     </div>
