--- a/repetition/index.html
+++ b/repetition/index.html
@@ -17,8 +17,18 @@
             <input type="text" id="inputNumber">
             <button id="createButton">Create</button>
 
+            <br>
+
+            <label for="mostRepeatedNumberField">Most Repeated Number(s): </label>
+            <input type="text" id="mostRepeatedNumberField">
+
+            <br>
+            <label for="numbersNotInPlaceField">Number(s) not in place: </label>
+            <input type="text" id="numbersNotInPlaceField">
+
         </div>
         <script src="../common.js"> </script>
+        <script src="index.js"> </script>
     </div>
 </body>
 
