--- a/repetition/index.html
+++ b/repetition/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Repetition</title>
     <link rel="stylesheet" href="../common.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
