--- a/clear/index.html
+++ b/clear/index.html
@@ -6,19 +6,28 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Clear</title>
     <link rel="stylesheet" href="../common.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div id="container">
         <a href="../index.html">HOME</a>
+        <p> Du är i clear mappen </p>
         <div>
             <label for=inputNumber> How many numbers in the grid?</label>
             <input type="text" id="inputNumber">
             <button id="createButton">Create</button>
-
         </div>
-        <p> Du är i clear mappen </p>
+
+        <br>
+
+        <button id="clearButton">Fill Cleared</button>
+
+
         <script src="../common.js"> </script>
+        <script src="index.js"> </script>
+
+
     </div>
 </body>
 
