--- a/findSame/index.html
+++ b/findSame/index.html
@@ -17,8 +17,15 @@
             <input type="text" id="inputNumber">
             <button id="createButton">Create</button>
 
+            <br>
+
+            <label for="resetButton" id="resetButtonText">Click on a number to find copies</label>
+            <button id="resetButton">Reset</button>
+
         </div>
         <script src="../common.js"> </script>
+        <script src="index.js"> </script>
+
     </div>
 </body>
 
