--- a/addUpTo/index.html
+++ b/addUpTo/index.html
@@ -6,19 +6,27 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>AddUpTo</title>
     <link rel="stylesheet" href="../common.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div id="container">
-        <a href="../index.html">HOME</a>
-        <p>Du är i addUpTo mappen</p>
-        <div>
-            <label for=inputNumber> How many numbers in the grid?</label>
-            <input type="text" id="inputNumber">
-            <button id="createButton">Create</button>
-
+        <a href="../index.html" id="homeLink">HOME</a>
+        <div id="buttonContainer">
+            <div id="firstDiv">
+                <label for=inputNumber> How many numbers in the grid?</label>
+                <input type="text" id="inputNumber">
+                <button id="createButton">Create</button>
+            </div>
+            <div id="secondDiv">
+                <label for="addUpToNumberField">Add upp to: </label>
+                <input type="text" id="addUpToNumberField">
+                <button id="findTwoCellsButton">Find Two Cells </button>
+            </div>
         </div>
         <script src="../common.js"> </script>
+        <script src="index.js"> </script>
+
     </div>
 </body>
 
