--- a/remove/index.html
+++ b/remove/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Remove</title>
     <link rel="stylesheet" href="../common.css">
+    <link rel="stylesheet" href="index.css">
+
 </head>
 
 <body>
     <div id="container">
-        <div>
-            <a href="../index.html">HOME</a>
-            <p>Du är i remove mappen</p>
-            <div>
+        <a href="../index.html" id="homeLink">HOME</a>
+        <div id="buttonContainer">
+            <div id="firstDiv">
                 <label for=inputNumber> How many numbers in the grid?</label>
                 <input type="text" id="inputNumber">
                 <button id="createButton">Create</button>
 
             </div>
-            <br>
-            <div>
+            <div id="secondDiv">
                 <button id="newRandomNumberButton">New Random Number</button>
                 <input type="text" id="newRandomNumberField">
                 <button id="removeButton">Remove</button>
