--- a/repetition/index.html
+++ b/repetition/index.html
@@ -11,22 +11,23 @@
 
 <body>
     <div id="container">
-        <a href="../index.html">HOME</a>
-        <p>Du är i repetition mappen</p>
-        <div>
-            <label for=inputNumber> How many numbers in the grid?</label>
-            <input type="text" id="inputNumber">
-            <button id="createButton">Create</button>
 
-            <br>
-
-            <label for="mostRepeatedNumberField">Most Repeated Number(s): </label>
-            <input type="text" id="mostRepeatedNumberField">
-
-            <br>
-            <label for="numbersNotInPlaceField">Number(s) not in place: </label>
-            <input type="text" id="numbersNotInPlaceField">
-
+        <div id="buttonContainer">
+            <a href="../index.html" id="homeLink">HOME</a>
+            <p> ( EJ FÄRDIG )</p>
+            <div id="firstDiv">
+                <label for=inputNumber> How many numbers in the grid?</label>
+                <input type="text" id="inputNumber">
+                <button id="createButton">Create</button>
+            </div>
+            <div id="secondDiv">
+                <label for="mostRepeatedNumberField">Most Repeated Number(s): </label>
+                <input type="text" id="mostRepeatedNumberField">
+            </div>
+            <div id="secondDiv">
+                <label for="numbersNotInPlaceField">Number(s) not in place: </label>
+                <input type="text" id="numbersNotInPlaceField">
+            </div>
         </div>
         <script src="../common.js"> </script>
         <script src="index.js"> </script>
