--- a/findSame/index.html
+++ b/findSame/index.html
@@ -6,27 +6,26 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>FindSame</title>
     <link rel="stylesheet" href="../common.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div id="container">
-        <a href="../index.html">HOME</a>
-        <p>Du är i findSame mappen</p>
-        <div>
-            <label for=inputNumber> How many numbers in the grid?</label>
-            <input type="text" id="inputNumber">
-            <button id="createButton">Create</button>
-
-            <br>
-
-            <label for="resetButton" id="resetButtonText">Click on a number to find copies</label>
-            <button id="resetButton">Reset</button>
+        <a href="../index.html" id="homeLink">HOME</a>
+        <div id="buttonContainer">
+            <div id="firstDiv">
+                <label for=inputNumber> How many numbers in the grid?</label>
+                <input type="text" id="inputNumber">
+                <button id="createButton">Create</button>
+            </div>
+            <div id="secondDiv">
+                <label for="resetButton" id="resetButtonText">Click on a number to find copies</label>
+                <button id="resetButton">Reset</button>
+            </div>
+            <script src="../common.js"> </script>
+            <script src="index.js"> </script>
 
         </div>
-        <script src="../common.js"> </script>
-        <script src="index.js"> </script>
-
-    </div>
 </body>
 
 </html>
