--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt 1</title>
     <link rel="stylesheet" href="common.css">
+
+
 </head>
 
 <body>
-    <a href="remove/index.html">Remove</a>
-    <a href="sum/index.html">Sum</a>
-    <a href="repetition/index.html">Repetitions</a>
-    <a href="clear/index.html">Clear</a>
-    <a href="findSame/index.html">Find Same</a>
-    <a href="addUpTo/index.html">Add Up To</a>
-
+    <div id="firstPageDiv">
+        <a href="remove/index.html">REMOVE</a>
+        <a href="sum/index.html">SUM</a>
+        <a href="clear/index.html">CLEAR</a>
+        <a href="findSame/index.html">FIND SAME</a>
+        <a href="addUpTo/index.html">ADD UP TO</a>
+        <a href="repetition/index.html">REPETITIONS</a>
     </div>
 </body>
 
