--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="findSame/index.html">FIND SAME</a>
         <a href="addUpTo/index.html">ADD UP TO</a>
         <a href="repetition/index.html">REPETITIONS</a>
+        <a href="links/index.html">LINKS</a>
     </div>
 </body>
 
